--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -113,6 +113,17 @@ p.note
       <footer class="site-footer">
           <span class="site-footer-owner">Github Repository</span>
         <span class="site-footer-credits">Break: A Question Understanding Benchmark</span>
+        
+        <p float="left">
+          <img src="images/hammer_and_anvil-1.png" height="100">
+          <a href="https://allenai.org/">
+            <img src="images/AI2_Logo_3color.png" height="98">
+          </a>
+          <a href="https://www.tau-nlp.org/">
+            <img src="images/tau_nlp-1.png" height="100">
+          </a>
+        </p>
+
       </footer>
     </main>
    </div>
