--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -115,7 +115,9 @@ p.note
         <span class="site-footer-credits">Break: A Question Understanding Benchmark</span>
         
         <p float="left">
-          <img src="images/hammer_and_anvil-1.png" height="100">
+          <a href="https://allenai.org/data/data-all.html">
+            <img src="images/hammer_and_anvil-1.png" height="100">
+          </a>
           <a href="https://allenai.org/">
             <img src="images/AI2_Logo_3color.png" height="98">
           </a>
