--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -101,7 +101,7 @@ p.note
       <h1 class="project-name">Break</h1>
         <a href="{{ site.github.repository_url }}" class="btn">Paper</a>  
         <a href="{{ site.github.repository_url }}" class="btn">GitHub</a>
-        <a href="{{ site.github.zip_url }}" class="btn">Download</a>
+        <a href="https://github.com/allenai/Break/raw/master/break_dataset/Break-dataset.zip" class="btn">Download</a>
         <a href="{{ site.github.tar_url }}" class="btn">Explore</a>
         <a href="{{ site.github.tar_url }}" class="btn">Leaderboard</a>
     </header>
