--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -99,11 +99,11 @@ p.note
  <div class="main">
     <header class="page-header" role="banner">
       <h1 class="project-name">Break</h1>
-        <a href="{{ site.github.repository_url }}" class="btn">Paper</a>  
+        <a href="https://arxiv.org/" class="btn">Paper</a>  
         <a href="{{ site.github.repository_url }}" class="btn">GitHub</a>
-        <a href="#Download" class="btn">Download</a>
-        <a href="{{ site.github.tar_url }}" class="btn">Explore</a>
-        <a href="{{ site.github.tar_url }}" class="btn">Leaderboard</a>
+        <a href="https://allenai.github.io/Break/#download" class="btn">Download</a>
+        <a href="https://allenai.github.io/Break/#explore" class="btn">Explore</a>
+        <a href="https://allenai.github.io/Break/#leaderboard" class="btn">Leaderboard</a>
     </header>
   
 
