--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -90,10 +90,10 @@ p.note
 <body>
 
 <div class="navbar">
-  <a class="active" href="#home">Break</a>
-  <a href="#contact">About</a>
-  <a href="#news">Paper</a>
-  <a href="#contact">Explore</a>
+  <a class="active" href="https://allenai.github.io/Break/">Break</a>
+  <a href="https://allenai.github.io/Break/blogpost.html">About</a>
+  <a href="https://arxiv.org/">Paper</a>
+  <a href="https://allenai.github.io/Break/explore.html">Explore</a>
 </div>
  
  <div class="main">
