--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -111,8 +111,8 @@ p.note
       {{ content }}
 
       <footer class="site-footer">
-          <span class="site-footer-owner">Github Repository</span>
-        <span class="site-footer-credits">Break: A Question Understanding Benchmark</span>
+          <span class="site-footer-owner">Break</span>
+        <span class="site-footer-credits">A Question Understanding Benchmark</span>
         
         <p float="left">
           <a href="https://allenai.org/data/data-all.html">
