--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -85,6 +85,20 @@ p.note
      padding: 15px 15px;
      display: inline-block;
 }
+      
+p.decomp
+{
+     -moz-border-radius: 6px;
+     -webkit-border-radius: 6px;
+     background-color: #ddffdd;
+     background-repeat: no-repeat;
+     border: solid 1px #4CAF50;
+     border-radius: 6px;
+     line-height: 18px;
+     overflow: hidden;
+     padding: 15px 15px;
+     display: inline-block;
+}
 </style>
 </head>
 <body>
