--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -105,7 +105,7 @@ p.decomp
 
 <div class="navbar">
   <a class="active" href="https://allenai.github.io/Break/">Break</a>
-  <a href="https://allenai.github.io/Break/blogpost.html">About</a>
+  <a href="https://allenai.github.io/Break/blogpost.html">Blog</a>
   <a href="https://arxiv.org/">Paper</a>
   <a href="https://allenai.github.io/Break/explore.html">Explore</a>
 </div>
