--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -116,7 +116,7 @@ p.decomp
         <a href="https://arxiv.org/" class="btn">Paper</a>  
         <a href="{{ site.github.repository_url }}" class="btn">GitHub</a>
         <a href="https://allenai.github.io/Break/#download" class="btn">Download</a>
-        <a href="https://allenai.github.io/Break/#explore" class="btn">Explore</a>
+        <a href="https://allenai.github.io/Break/explore.html" class="btn">Explore</a>
         <a href="https://allenai.github.io/Break/#leaderboard" class="btn">Leaderboard</a>
     </header>
   
