--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -106,14 +106,14 @@ p.decomp
 <div class="navbar">
   <a class="active" href="https://allenai.github.io/Break/">Break</a>
   <a href="https://allenai.github.io/Break/blogpost.html">Blog</a>
-  <a href="https://arxiv.org/">Paper</a>
+  <a href="https://arxiv.org/abs/2001.11770v1">Paper</a>
   <a href="https://allenai.github.io/Break/explore.html">Explore</a>
 </div>
  
  <div class="main">
     <header class="page-header" role="banner">
       <h1 class="project-name">Break</h1>
-        <a href="https://arxiv.org/" class="btn">Paper</a>  
+        <a href="https://arxiv.org/abs/2001.11770v1" class="btn">Paper</a>  
         <a href="{{ site.github.repository_url }}" class="btn">GitHub</a>
         <a href="https://allenai.github.io/Break/#download" class="btn">Download</a>
         <a href="https://allenai.github.io/Break/explore.html" class="btn">Explore</a>
