added new AI2 logo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -130,7 +130,7 @@ p.decomp
         
         <p float="left">
           <a href="https://allenai.org/data/data-all.html">
-            <img src="images/hammer_and_anvil-1.png" height="100">
+            <img src="images/break.svg" height="100">
           </a>
           <a href="https://allenai.org/">
             <img src="images/AI2_Logo_3color.png" height="98">
