--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -132,6 +132,9 @@ p.decomp
           <a href="https://allenai.org/data/data-all.html">
             <img src="images/break.svg" height="100">
           </a>
+          <a href="https://allenai.org/data/data-all.html">
+            <img src="images/break-high-level.svg" height="100">
+          </a>
           <a href="https://allenai.org/">
             <img src="images/AI2_Logo_3color.png" height="98">
           </a>
