leaderboard links to website layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -129,10 +129,10 @@ p.decomp
         <span class="site-footer-credits">A Question Understanding Benchmark</span>
         
         <p float="left">
-          <a href="https://allenai.org/data/data-all.html">
+          <a href="https://leaderboard.allenai.org/break/">
             <img src="images/break.svg" height="100">
           </a>
-          <a href="https://allenai.org/data/data-all.html">
+          <a href="https://leaderboard.allenai.org/break_high_level/">
             <img src="images/break-high-level.svg" height="100">
           </a>
           <a href="https://allenai.org/">
